--- a/index.html
+++ b/index.html
@@ -1,39 +1,15 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CSS Exercise</title>
-  <!-- CALL THE CCS FILE -->
-  <link rel="stylesheet" type="text/css" href="style.css">
-  <!-- INTRODUCE CSS IN HTML CODE -->
-  <style> 
-    li{
-      background-color: pink;
-    }
-  </style>
+	<title>Gradient Background</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
-  <button class="btn btn-primary">Default</button>
-  <header>
-    <nav>
-      <ul>
-        <li>Home</li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="login.html">Login</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section>
-    <h2>Home</h2>
-    <!-- INTRODUCE INLINE STYLE -->
-    <p style="color:green">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-    <p class="tipo1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-    <p class="tipo2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-    <p class="tipo3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-    <div id="div1">
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-      <p class="tipo2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod.</p>
-    </div>
-  </section>
+<body id="gradient">
+	<h1>Background Generator</h1>
+	<input class="color1" type="color" name="color1" value="#00ff00">
+	<input class="color2" type="color" name="color2" value="#ff0000">
+	<h2>Current CSS Background</h2>
+	<h3></h3>
+	<script type="text/javascript" src="script.js"></script>
 </body>
 </html>
